#21 Done static files

--- a/src/views/sample.ejs
+++ b/src/views/sample.ejs
@@ -7,5 +7,8 @@
   </head>
   <body>
     hello world with ejs
+    <div>
+      <img src="/images/DT.jpg" alt="DT" />
+    </div>
   </body>
 </html>
