--- a/src/views/sample.ejs
+++ b/src/views/sample.ejs
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <title>Document</title>
   </head>
   <body>
     hello world with ejs
     <div>
-      <img src="/images/DT.jpg" alt="DT" />
+      <img class="img" src="/images/DT.jpg" alt="DT" />
     </div>
   </body>
 </html>
