--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -16,27 +16,29 @@
     </div>
 
     <div class="form-add-new">
-      <fieldset>
-        <legend>Form add new users</legend>
+      <form action="/create-user " method="post">
+        <fieldset>
+          <legend>Add new users</legend>
 
-        <div class="input-group">
-          <label for="">Email: </label>
-          <input type="text" />
-        </div>
+          <div class="input-group">
+            <label for="">Email: </label>
+            <input type="text" id="emailId" name="email" />
+          </div>
 
-        <div class="input-group">
-          <label for="">Name: </label>
-          <input type="text" />
-        </div>
+          <div class="input-group">
+            <label for="">Name: </label>
+            <input type="text" name="myName" />
+          </div>
 
-        <div class="input-group">
-          <label for="">City: </label>
-          <input type="text" />
-        </div>
-        <div>
-          <button>Save</button>
-        </div>
-      </fieldset>
+          <div class="input-group">
+            <label for="">City: </label>
+            <input type="text" name="city" />
+          </div>
+          <div>
+            <button>Save</button>
+          </div>
+        </fieldset>
+      </form>
     </div>
   </body>
 </html>
