--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -14,6 +14,7 @@
     </div>
 
     <div class="table-container">
+      <%= JSON.stringify(listUsers) %>
       <div class="title">List Users</div>
       <table>
         <tr>
@@ -21,12 +22,17 @@
           <th>Email</th>
           <th>Name</th>
           <th>City</th>
+          <th>Actions</th>
         </tr>
         <tr>
           <td>Peter</td>
           <td>Griffin</td>
           <td>$100</td>
           <td>$100</td>
+          <td>
+            <button>Edit</button>
+            <button>Delete</button>
+          </td>
         </tr>
         <tr>
           <td>Lois</td>
