--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -14,7 +14,7 @@
     </div>
 
     <div class="table-container">
-      <%= JSON.stringify(listUsers) %>
+      <!-- <%= JSON.stringify(listUsers) %> -->
       <div class="title">List Users</div>
       <table>
         <tr>
@@ -44,12 +44,11 @@
           <td><%= user.name %></td>
           <td><%= user.city %></td>
           <td>
-            <button>Edit</button>
+            <a href="/update">Edit</a>
             <button>Delete</button>
           </td>
         </tr>
         <% }) %>
-        
       </table>
     </div>
   </body>
