--- a/src/views/edit.ejs
+++ b/src/views/edit.ejs
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <!-- <%= JSON.stringify(userEdit) %> -->
     <div class="topnav">
       <a href="/">Home</a>
       <a href="/create">Create Users</a>
@@ -20,17 +21,22 @@
 
           <div class="input-group">
             <label for="">Email: </label>
-            <input type="text" id="emailId" name="email" />
+            <input
+              type="text"
+              id="emailId"
+              name="email"
+              value="<%= userEdit.email %>"
+            />
           </div>
 
           <div class="input-group">
             <label for="">Name: </label>
-            <input type="text" name="myName" />
+            <input type="text" name="myName" value="<%= userEdit.name %>" />
           </div>
 
           <div class="input-group">
             <label for="">City: </label>
-            <input type="text" name="city" />
+            <input type="text" name="city" value="<%= userEdit.city %>" />
           </div>
           <div>
             <button>Save</button>
