--- a/src/views/edit.ejs
+++ b/src/views/edit.ejs
@@ -15,9 +15,14 @@
     </div>
 
     <div class="form-add-new">
-      <form action="/create-user " method="post">
+      <form action="/update-user " method="post">
         <fieldset>
           <legend>Update a user</legend>
+
+          <div class="input-group d-none">
+            <label for="">Id: </label>
+            <input type="text" id="Id" name="id" value="<%= userEdit.id %>" />
+          </div>
 
           <div class="input-group">
             <label for="">Email: </label>
