#47 Delete User By Id

--- a/src/views/delete.ejs
+++ b/src/views/delete.ejs
@@ -21,7 +21,7 @@
 
           <div class="input-group d-none">
             <label for="">Id: </label>
-            <input type="text" id="Id" name="id" value="<%= userEdit.id %>" />
+            <input type="text" id="userId" name="userId" value="<%= userEdit.id %>" />
           </div>
 
           <div class="input-group">
